Preparing release 13.0 of Jackpot.