@@ -52,32 +52,48 @@
     </target>
 
     <target name="build-and-test">
-        <property name="version" value="12.5" />
+        <property name="version" value="13.0" />
         <condition property="jackpot.root" value="${basedir}" else="${basedir}/..">
             <available file="${basedir}/LICENSE" />
         </condition>
         <ant dir="${basedir}" inheritAll="false" inheritRefs="false">
             <property name="nbplatform.default.harness.dir" value="${NETBEANS_PLATFORM}/harness" />
             <property name="nbplatform.default.netbeans.dest.dir" value="${NETBEANS_PLATFORM}" />
-            <property name="test.run.args" value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
-            <property name="test.nbjdk.home" value="${JDK11}" />
             <property name="jackpot.root" location="${jackpot.root}" />
             <target name="clean" />
             <target name="build" />
+            <target name="test" />
+        </ant>
+        <ant dir="${basedir}" inheritAll="false" inheritRefs="false">
+            <property name="nbplatform.default.harness.dir" value="${NETBEANS_PLATFORM}/harness" />
+            <property name="nbplatform.default.netbeans.dest.dir" value="${NETBEANS_PLATFORM}" />
+            <property name="test.nbjdk.home" value="${JDK11}" />
+            <property name="jackpot.root" location="${jackpot.root}" />
+            <target name="test" />
+        </ant>
+        <ant dir="${basedir}" inheritAll="false" inheritRefs="false">
+            <property name="nbplatform.default.harness.dir" value="${NETBEANS_PLATFORM}/harness" />
+            <property name="nbplatform.default.netbeans.dest.dir" value="${NETBEANS_PLATFORM}" />
+            <property name="test.nbjdk.home" value="${JDK17}" />
+            <property name="jackpot.root" location="${jackpot.root}" />
             <target name="test" />
         </ant>
         <ant dir="${basedir}/tool" target="create-standalone-tool" inheritAll="false" inheritRefs="false">
             <property name="nbplatform.default.harness.dir" value="${NETBEANS_PLATFORM}/harness" />
             <property name="nbplatform.default.netbeans.dest.dir" value="${NETBEANS_PLATFORM}" />
             <property name="continue.after.failing.tests" value="false" />
-            <property name="test.run.args" value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
-            <property name="test.nbjdk.home" value="${JDK11}" />
             <property name="jackpot.root" location="${jackpot.root}" />
         </ant>
         <property environment="env"/>
         <exec executable="build/test/scripted/run" dir="tool" failonerror="true">
+        </exec>
+        <exec executable="build/test/scripted/run" dir="tool" failonerror="true">
             <env key="JAVA_HOME" path="${JDK11}" />
             <env key="PATH" path="${JDK11}/bin:${env.PATH}" />
+        </exec>
+        <exec executable="build/test/scripted/run" dir="tool" failonerror="true">
+            <env key="JAVA_HOME" path="${JDK17}" />
+            <env key="PATH" path="${JDK17}/bin:${env.PATH}" />
         </exec>
         <echo>Installing tool to the local maven repository:</echo>
         <exec dir="." executable="mvn" failonerror="true">
@@ -89,7 +105,6 @@
         </exec>
         <echo>Run plugin tests:</echo>
         <exec dir="maven" executable="mvn" failonerror="true">
-            <env key="JAVA_HOME" path="${JDK11}" />
             <arg line="-Dmaven.executable=mvn -Djackpot.plugin.version=${version} test" />
         </exec>
         <property name="build.maven.repo" location="build/.m2" />
